examples/kju/positive/type_inference/simple_struct.kju
struct A
{
    a : Int;
}


fun kju() : Unit
{
    var a : ?;
    a = new(A);
}
