examples/kju/negative/structs/null_assignment.kju
struct A
{
    val : Int;
}

fun kju() : Unit
{
    var a : Int;
    a = null;
}